--- a/student-store-ui/src/components/ProductDetail/ProductDetail.css
+++ b/student-store-ui/src/components/ProductDetail/ProductDetail.css
@@ -1,7 +1,10 @@
 .product-detail{
-    background-color: brown;
+   padding-left: 90px;
 }
 
 .loading{
     font-family: 'Times New Roman', Times, serif;
+}
+.view{
+    text-align: center;
 }
