--- a/student-store-ui/src/components/App/App.css
+++ b/student-store-ui/src/components/App/App.css
@@ -3,7 +3,9 @@
   max-width: 100vw;
   height: 100%;
   min-height: 100vh;
-  display: flex;
+  max-width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
   flex-direction: row;
 }
 
